src/com/wasmplugin/parser/WasmParser.java
// This is a generated file. Not intended for manual editing.
package com.wasmplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.wasmplugin.psi.WasmTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WasmParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // param_list? result?
  public static boolean abbr_type_use(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_type_use")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_TYPE_USE, "<abbr type use>");
    r = abbr_type_use_0(b, l + 1);
    r = r && abbr_type_use_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // param_list?
  private static boolean abbr_type_use_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_type_use_0")) return false;
    param_list(b, l + 1);
    return true;
  }

  // result?
  private static boolean abbr_type_use_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_type_use_1")) return false;
    result(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // tALIGN tEQ tINT
  public static boolean align_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "align_arg")) return false;
    if (!nextTokenIs(b, TALIGN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TALIGN, TEQ, TINT);
    exit_section_(b, m, ALIGN_ARG, r);
    return r;
  }

  /* ********************************************************** */
  // tBLOCK tID? result? instruction* tEND tID?
  //                     |   tLOOP tID? result? instruction* tEND tID?
  //                     |   tIF tID? result? instruction* else_clause? tEND tID?
  static boolean block_instruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block_instruction_0(b, l + 1);
    if (!r) r = block_instruction_1(b, l + 1);
    if (!r) r = block_instruction_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tBLOCK tID? result? instruction* tEND tID?
  private static boolean block_instruction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TBLOCK);
    r = r && block_instruction_0_1(b, l + 1);
    r = r && block_instruction_0_2(b, l + 1);
    r = r && block_instruction_0_3(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_0_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tID?
  private static boolean block_instruction_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_1")) return false;
    consumeToken(b, TID);
    return true;
  }

  // result?
  private static boolean block_instruction_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_2")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean block_instruction_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_instruction_0_3", c)) break;
    }
    return true;
  }

  // tID?
  private static boolean block_instruction_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_5")) return false;
    consumeToken(b, TID);
    return true;
  }

  // tLOOP tID? result? instruction* tEND tID?
  private static boolean block_instruction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLOOP);
    r = r && block_instruction_1_1(b, l + 1);
    r = r && block_instruction_1_2(b, l + 1);
    r = r && block_instruction_1_3(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_1_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tID?
  private static boolean block_instruction_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_1")) return false;
    consumeToken(b, TID);
    return true;
  }

  // result?
  private static boolean block_instruction_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_2")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean block_instruction_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_instruction_1_3", c)) break;
    }
    return true;
  }

  // tID?
  private static boolean block_instruction_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_5")) return false;
    consumeToken(b, TID);
    return true;
  }

  // tIF tID? result? instruction* else_clause? tEND tID?
  private static boolean block_instruction_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TIF);
    r = r && block_instruction_2_1(b, l + 1);
    r = r && block_instruction_2_2(b, l + 1);
    r = r && block_instruction_2_3(b, l + 1);
    r = r && block_instruction_2_4(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_2_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tID?
  private static boolean block_instruction_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_1")) return false;
    consumeToken(b, TID);
    return true;
  }

  // result?
  private static boolean block_instruction_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_2")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean block_instruction_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_instruction_2_3", c)) break;
    }
    return true;
  }

  // else_clause?
  private static boolean block_instruction_2_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_4")) return false;
    else_clause(b, l + 1);
    return true;
  }

  // tID?
  private static boolean block_instruction_2_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_6")) return false;
    consumeToken(b, TID);
    return true;
  }

  /* ********************************************************** */
  // BLOCK_COMMENT | LINE_COMMENT
  public static boolean com(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "com")) return false;
    if (!nextTokenIs(b, "<com>", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COM, "<com>");
    r = consumeToken(b, BLOCK_COMMENT);
    if (!r) r = consumeToken(b, LINE_COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // tLP tDATA idx? offset_abbrv tNAME tRP
  public static boolean data(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TDATA);
    r = r && data_2(b, l + 1);
    r = r && offset_abbrv(b, l + 1);
    r = r && consumeTokens(b, 0, TNAME, TRP);
    exit_section_(b, m, DATA, r);
    return r;
  }

  // idx?
  private static boolean data_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_2")) return false;
    idx(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // tLP tDATA tNAME tRP
  public static boolean data_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TDATA, TNAME, TRP);
    exit_section_(b, m, DATA_SHORT, r);
    return r;
  }

  /* ********************************************************** */
  // tLP tELEM idx* tRP
  public static boolean elem_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TELEM);
    r = r && elem_short_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, ELEM_SHORT, r);
    return r;
  }

  // idx*
  private static boolean elem_short_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_short_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!idx(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elem_short_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tANYFUNC | tFUNCREF
  public static boolean elem_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_type")) return false;
    if (!nextTokenIs(b, "<elem type>", TANYFUNC, TFUNCREF)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELEM_TYPE, "<elem type>");
    r = consumeToken(b, TANYFUNC);
    if (!r) r = consumeToken(b, TFUNCREF);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // tLP tELEM idx? offset_abbrv tFUNC* idx*  tRP
  public static boolean element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TELEM);
    r = r && element_2(b, l + 1);
    r = r && offset_abbrv(b, l + 1);
    r = r && element_4(b, l + 1);
    r = r && element_5(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, ELEMENT, r);
    return r;
  }

  // idx?
  private static boolean element_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_2")) return false;
    idx(b, l + 1);
    return true;
  }

  // tFUNC*
  private static boolean element_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, TFUNC)) break;
      if (!empty_element_parsed_guard_(b, "element_4", c)) break;
    }
    return true;
  }

  // idx*
  private static boolean element_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!idx(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "element_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tELSE tID? instruction*
  static boolean else_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause")) return false;
    if (!nextTokenIs(b, TELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TELSE);
    r = r && else_clause_1(b, l + 1);
    r = r && else_clause_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tID?
  private static boolean else_clause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_1")) return false;
    consumeToken(b, TID);
    return true;
  }

  // instruction*
  private static boolean else_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "else_clause_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP tTHEN instruction* tRP
  static boolean else_clause_folded(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_folded")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TTHEN);
    r = r && else_clause_folded_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // instruction*
  private static boolean else_clause_folded_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_folded_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "else_clause_folded_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP tEXPORT tNAME export_desc tRP
  public static boolean export(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TEXPORT, TNAME);
    r = r && export_desc(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, EXPORT, r);
    return r;
  }

  /* ********************************************************** */
  // tLP (tFUNC|tMEMORY|tTABLE|tGLOBAL) idx tRP
  public static boolean export_desc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_desc")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLP);
    r = r && export_desc_1(b, l + 1);
    r = r && idx(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, EXPORT_DESC, r);
    return r;
  }

  // tFUNC|tMEMORY|tTABLE|tGLOBAL
  private static boolean export_desc_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_desc_1")) return false;
    boolean r;
    r = consumeToken(b, TFUNC);
    if (!r) r = consumeToken(b, TMEMORY);
    if (!r) r = consumeToken(b, TTABLE);
    if (!r) r = consumeToken(b, TGLOBAL);
    return r;
  }

  /* ********************************************************** */
  // tLP tEXPORT tNAME tRP
  public static boolean export_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TEXPORT, TNAME, TRP);
    exit_section_(b, m, EXPORT_SHORT, r);
    return r;
  }

  /* ********************************************************** */
  // instruction*
  static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP plain_instruction folded_instruction* tRP
  //                     |   tLP tBLOCK tID? result? instruction* tRP
  //                     |   tLP tLOOP tID? result? instruction* tRP
  //                     |   tLP tIF tID? result? folded_instruction* tLP tTHEN instruction* tRP else_clause_folded? tRP
  static boolean folded_instruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = folded_instruction_0(b, l + 1);
    if (!r) r = folded_instruction_1(b, l + 1);
    if (!r) r = folded_instruction_2(b, l + 1);
    if (!r) r = folded_instruction_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tLP plain_instruction folded_instruction* tRP
  private static boolean folded_instruction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLP);
    r = r && plain_instruction(b, l + 1);
    r = r && folded_instruction_0_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // folded_instruction*
  private static boolean folded_instruction_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!folded_instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "folded_instruction_0_2", c)) break;
    }
    return true;
  }

  // tLP tBLOCK tID? result? instruction* tRP
  private static boolean folded_instruction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TBLOCK);
    r = r && folded_instruction_1_2(b, l + 1);
    r = r && folded_instruction_1_3(b, l + 1);
    r = r && folded_instruction_1_4(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // tID?
  private static boolean folded_instruction_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_2")) return false;
    consumeToken(b, TID);
    return true;
  }

  // result?
  private static boolean folded_instruction_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_3")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean folded_instruction_1_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "folded_instruction_1_4", c)) break;
    }
    return true;
  }
